--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     entrypoint: gunicorn
     command: --reload --workers=5 --threads=2 --max-requests 1000 --bind 0.0.0.0:8000 mymoviedb.wsgi
     ports:
-      - 8000:8000
+      - 8000
     volumes:
       - .:/app/mymoviedb
     depends_on:
@@ -31,12 +31,22 @@ services:
     entrypoint: python
     command: aio-server.py
     ports:
-      - 8080:8080
+      - 8080
     volumes:
       - .:/app/mymoviedb
     depends_on:
       - app
       - db
+
+  proxy:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+    depends_on:
+      - app
+      - api
 
 volumes:
   pgdata:
